--- a/heimdall.yml
+++ b/heimdall.yml
@@ -3,11 +3,11 @@ rancher:
       heimdall:
         image: linuxserver/heimdall
         container_name: heimdall
-        restart: always
+        restart: unless-stopped
         environment:
-          PUID: 1020
-          PGID: 1020
-          TZ: Europe/Stockholm
+          PUID: 1000
+          PGID: 1000
+          TZ: America/Vancouver
         volumes:
         - /mnt/nfs-1/config/heimdall:/config
         ports:
