--- a/jackett.yml
+++ b/jackett.yml
@@ -3,11 +3,11 @@ rancher:
     jackett:
       image: linuxserver/jackett
       container_name: jackett
-      restart: always
+      restart: unless-stopped
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
       ports:
       - 9117:9117
       volumes:
