--- a/lychee.yml
+++ b/lychee.yml
@@ -3,11 +3,11 @@ rancher:
     lychee:
       image: linuxserver/lychee
       container_name: lychee
-      restart: always
+      restart: unless-stopped
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
       ports:
       - 5467:80
       volumes:
