--- a/mariadb.yml
+++ b/mariadb.yml
@@ -5,11 +5,11 @@ rancher:
       container_name: mariadb-nextcloud
       networks:
       - proxynet
-      restart: always
+      restart: unless-stopped
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
         MYSQL_ROOT_PASSWORD: root_password
         MYSQL_DATABASE: nextcloud
         MYSQL_USER: nextcloud
