--- a/piwigo.yml
+++ b/piwigo.yml
@@ -5,9 +5,9 @@ rancher:
       container_name: piwigo
       restart: unless-stopped
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
       ports:
       - 4466:80
       volumes:
