--- a/piwigodb.yml
+++ b/piwigodb.yml
@@ -7,9 +7,9 @@ rancher:
       - proxynet
       restart: unless-stopped
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
         MYSQL_ROOT_PASSWORD: root_password
         MYSQL_DATABASE: piwigo
         MYSQL_USER: piwigo
