--- a/portainer.yml
+++ b/portainer.yml
@@ -5,9 +5,9 @@ rancher:
       container_name: portainer
       restart: always
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
       labels:
         io.rancher.os.after: console, preload-user-images
       privileged: true
