--- a/resilio-sync.yml
+++ b/resilio-sync.yml
@@ -3,11 +3,11 @@ rancher:
     resilio-sync:
       image: linuxserver/resilio-sync
       container_name: resilio-sync
-      restart: always
+      restart: unless-stopped
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
         UMASK_SET: <022>
       ports:
       - 8888:8888
