--- a/sonarr.yml
+++ b/sonarr.yml
@@ -3,11 +3,11 @@ rancher:
     sonarr:
       image: linuxserver/sonarr
       container_name: sonarr
-      restart: always
+      restart: unless-stopped
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
       ports:
       - 8989:8989
       volumes:
