--- a/transmission.yml
+++ b/transmission.yml
@@ -3,11 +3,11 @@ rancher:
     transmission:
       image: linuxserver/transmission
       container_name: transmission
-      restart: always
+      restart: unless-stopped
       environment:
-        PGID: 1020
-        PUID: 1020
-        TZ: Europe/Stockholm
+        PGID: 1000
+        PUID: 1000
+        TZ: America/Vancouver
       ports:
       - 9091:9091
       - 51413:51413
